deployment/kubernetes/bak/statefulset.yml
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ${PROJECT_NAME}
  namespace: ${PROJECT_NAMESPACE}
  labels:
    app: ${PROJECT_NAME}
spec:
  serviceName: ${PROJECT_NAME}
  replicas: 1
  selector:
    matchLabels:
      app: ${PROJECT_NAME}
  template:
    metadata:
      labels:
        app: ${PROJECT_NAME}
    spec:
      imagePullSecrets:
        - name: ${PROJECT_REGISTRY_ACCESS}
      serviceAccountName: micro-service-cluster-service-account-${PROJECT_NAMESPACE}
      containers:
        - name: ${PROJECT_NAME}
          image: ${PROJECT_IMAGE}
          resources:
            requests:
              cpu: ${PROJECT_RESOURCES_REQUESTS_CPU}
              memory: ${PROJECT_RESOURCES_REQUESTS_MEMORY}
            limits:
              cpu: ${PROJECT_RESOURCES_LIMITS_CPU}
              memory: ${PROJECT_RESOURCES_LIMITS_MEMORY}
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: ${PROJECT_HEALTH_PATH}
              port: ${PROJECT_PORT}
              scheme: HTTP
            initialDelaySeconds: ${PROJECT_HEALTH_DELAY}
            periodSeconds: ${PROJECT_HEALTH_PERIOD}
            failureThreshold: ${PROJECT_HEALTH_FAILURE}
            successThreshold: ${PROJECT_HEALTH_SUCCESS}
            timeoutSeconds: ${PROJECT_HEALTH_TIMEOUT}
          readinessProbe:
            httpGet:
              path: ${PROJECT_HEALTH_PATH}
              port: ${PROJECT_PORT}
              scheme: HTTP
            initialDelaySeconds: ${PROJECT_HEALTH_DELAY}
            periodSeconds: ${PROJECT_HEALTH_PERIOD}
            failureThreshold: ${PROJECT_HEALTH_FAILURE}
            successThreshold: ${PROJECT_HEALTH_SUCCESS}
            timeoutSeconds: ${PROJECT_HEALTH_TIMEOUT}
